--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Origami</title>
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
 </head>
